--- a/src/less/mixins/mixin-forms.less
+++ b/src/less/mixins/mixin-forms.less
@@ -92,8 +92,7 @@
 }
 
 
-.mixin-addon-size(@input-height; @padding-horizontal; @font-size; @background: @color-gray-lightest) {
-  background: @background;
+.mixin-addon-size(@input-height; @padding-horizontal; @font-size) {
   font-size: @font-size;
   height: @input-height;
   padding: 0 @padding-horizontal;
