--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -290,14 +290,16 @@
 @input-height-large:             @btn-height-large;
 @input-height-small:             @btn-height-small;
 
+@form-addon-item-bg:             @color-gray-lightest;
+@form-control-chevron-padding:   3rem;
+@form-element-color:             @color-primary;
 @form-group-margin-bottom:       @line-height-computed;
+
+
 
 @legend-color:                   @color-gray-dark;
 @legend-border-color:            #e5e5e5;
 
-@form-element-color:             @color-primary;
-
-@form-control-chevron-padding:   3rem;
 
 
 // -------------------------
